Z-index bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -163,6 +163,7 @@ button:hover{
   left: 0;
   right: 0;
   border-radius: 5px;
+  z-index: 1;
 }
 
 .title {
